--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <div class="contents-title">
                 <h2>CONTENTS</h2>
                 <h1>変更テスト</h1>
+                <h1>変更テスト</h1>
             </div>
         </div>
     </main>
