--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <p>みっさん</p>
                 </div>
                 <div class="member">
-                    <img src="顔アイコン.jpeg" alt="顔写真">
+                    <img src="usagi.jpg" alt="うさぎ">
                     <p>ゆっちゃん</p>
                 </div>
                 <div class="member">
