--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="members1">
                 <div class="member">
-                    <img src="顔アイコン.jpeg" alt="顔写真">
+                    <img src="bass.jpg" alt="ベース">
                     <p>みっさん</p>
                 </div>
                 <div class="member">
@@ -41,17 +41,17 @@
                     <p>ゆっちゃん</p>
                 </div>
                 <div class="member">
-                    <img src="顔アイコン.jpeg" alt="顔写真">
+                    <img src="カビゴン.jpg" alt="カビゴン">
                     <p>ひろっき</p>
                 </div>
             </div>
             <div class="members2">
                 <div class="member">
-                    <img src="顔アイコン.jpeg" alt="顔写真">
+                    <img src="ovation.jpg" alt="ギター">
                     <p>わい</p>
                 </div>
                 <div class="member">
-                    <img src="顔アイコン.jpeg" alt="顔写真">
+                    <img src="obungu.jpg" alt="お文具">
                     <p>あやーな</p>
                 </div>
             </div>
